# BioLab

./: .gitignore  .gitmodules  Build_VisualStudio.bat  CMakeLists.txt
BioLab/: CMakeLists.txt
BioLab/Source/: Application.cpp  Application.h  Console.cpp  Console.h  Core.h  Main.cpp  SerialPort.h
BioLab/Source/NodeEditor/: Comment.cpp  Comment.h  Filter.cpp  Filter.h  Node.h  NodeEditor.cpp  NodeEditor.h  ProcessingNodes.cpp  ProcessingNodes.h  Scope.cpp  Scope.h  Script.cpp  Script.h  ScriptSerializer.cpp  ScriptSerializer.h  Source.cpp  Source.h
BioLab/Source/NodeEditor/Nodes/: Comment.cpp  Comment.h  Filter.h  LiveNodes.cpp  LiveNodes.h  OfflineNodes.cpp  OfflineNodes.h  PostProcessingNodes.cpp  PostProcessingNodes.h  ProcessingNodes.cpp  ProcessingNodes.h  Scope.cpp  Scope.h  Source.h
BioLab/Source/NodeEditor/Scripts/: LiveScript.cpp  LiveScript.h
BioLab/Source/SignalProcessing/: DigitalFilter.cpp  DigitalFilter.h  Signal.cpp  Signal.h  SignalProcessing.cpp  SignalProcessing.h
BioLab/Source/UI/: DefaultPlotWindow.cpp  DefaultPlotWindow.h  ECGAnalyzeWindow.cpp  ECGAnalyzeWindow.h  GoldbergerWindow.cpp  GoldbergerWindow.h  IconsMaterialDesign.h  LiveWindow.cpp  LiveWindow.h  PlotWindow.cpp  PlotWindow.h  UICore.cpp  UICore.h  Window.cpp  Window.h
BioLab/Source/UI/Backends/: GLFW_OpenGL.cpp  GLFW_OpenGL.h  Win32_DirectX.cpp  Win32_DirectX.h
BioLab/Source/Util/: Buffer.h  Console.cpp  FileUtils.h  LiveBuffer.cpp  LiveBuffer.h  SerialPort.cpp  Signal.h
Recordings/: CH1_2023-03-02_10-13-34.csv  CH2_2023-03-02_10-13-34.csv  CH3_2023-03-02_10-13-34.csv  aVF_2023-03-02_10-13-34.csv  aVL_2023-03-02_10-13-34.csv  aVR_2023-03-02_10-13-34.csv
